# cdx-care

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/cdx-care/: SKILL.md
src/cdx_care/: __init__.py  apply.py  cli.py  cli_output.py  db_apply.py  diagnostics.py  doctor.py  envelope.py  errors.py  filesystem.py  git_tools.py  logs_compact.py  memory_plan.py  memory_reports.py  paths.py  plan.py  plan_actions.py  policy.py  policy_checks.py  policy_targets.py  processes.py  raw_sql.py  receipts.py  report_utils.py  reports.py  session_repair.py  sqlite_tools.py  support_paths.py  timeutil.py  types.py
tests/: cdx_care_fixtures.py  test_apply_paths.py  test_apply_receipts.py  test_apply_safety.py  test_cdx_care.py  test_cli_envelopes.py  test_cli_raw_and_lsof.py  test_cli_reports.py  test_diagnostics_cli.py  test_git_hygiene_lane.py  test_logs_compaction_lane.py  test_memory_auth_policy.py  test_memory_policy.py  test_session_repair_lane.py
