[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdx-care"
version = "0.1.2"
description = "Local Codex DB/state doctor, planner, and guarded reconciliation CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "Tiziano" }]
dependencies = []

[project.urls]
Repository = "https://github.com/Tiziano-AI/cdx-care"

[dependency-groups]
dev = [
  "basedpyright>=1.36.0",
  "ruff>=0.13.0",
]

[project.scripts]
cdx-care = "cdx_care.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cdx_care"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
